Update Computer Vision with initial steps

--- a/references.bib
+++ b/references.bib
@@ -634,6 +634,13 @@
     note={\url{https://www.creality.com/goods-detail/ender-3-v2-3d-printer}}
 }
 
+@misc{cite_baxter_cameras_wiki, 
+    title={Cameras},
+    author="{Rethink Robotics}",
+    year={2015},
+    note={\url{https://sdk.rethinkrobotics.com/wiki/Cameras}}
+}
+
 
 
 
