Update computer vision part with Face Detection Algorithms

--- a/references.bib
+++ b/references.bib
@@ -641,6 +641,75 @@
     note={\url{https://sdk.rethinkrobotics.com/wiki/Cameras}}
 }
 
+@misc{cite_viola_jones_yotube_video, 
+    title={The Viola-Jones Algorithm},
+    author={Youssef Shakrina},
+    year={2020},
+    note={\url{https://www.youtube.com/watch?v=p9vq90NYHMs}}
+}
+
+@article{cite_haar_features_example_viola_jones,
+    author = {Cauê Zaghetto and Luiz Henrique Aguiar and Alexandre Zaghetto and Célia G. Ralha and Flavio de Barros Vidal},
+    year = {2016},
+    title = {Agent-based framework to individual tracking in unconstrained environments},
+    note = {\url{https://www.researchgate.net/publication/317607006_Agent-based_framework_to_individual_tracking_in_unconstrained_environments}}
+}
+
+@misc{cite_matlab_integral_image, 
+    title={Integral Image},
+    author="{Mathworks}",
+    year={2021},
+    note={\url{https://la.mathworks.com/help/images/integral-image.html}}
+}
+
+@misc{cite_integral_image_photo_wikipedia, 
+    title={Summed-area Table},
+    author="{Cmglee}",
+    year={2021},
+    note={\url{https://en.wikipedia.org/wiki/Summed-area_table#/media/File:Integral_image_application_example.svg}}
+}
+
+@misc{cite_adaboost_explained, 
+    title={The Ultimate Guide to AdaBoost Algorithm | What is AdaBoost Algorithm?},
+    author={Ashish Kumar},
+    year={2020},
+    note={\url{https://www.mygreatlearning.com/blog/adaboost-algorithm/}}
+}
+
+@misc{cite_adaboost_patrick_winston, 
+    title={Artificial Intelligence: Learning: Boosting},
+    author={Patrick H. Winston},
+    year={2014},
+    note={\url{https://www.youtube.com/watch?v=UHBmv7qCey4&list=PLUl4u3cNGP63gFHB6xb-kVBiQHYe_4hSi&index=18}}
+}
+
+@article{cite_cascade_classifier_generalization,
+    author = {João Gama and Pavel Brazdil},
+    year = {2000},
+    title = {Cascade Generalization},
+    note = {\url{https://link.springer.com/article/10.1023/A:1007652114878}}
+}
+
+@misc{cite_face_detect_face_recognition_github_repo, 
+    title={GitHub Repository: Face Recognition},
+    author="{Geitgey, A et al}",
+    year={2021},
+    note={\url{https://github.com/ageitgey/face_recognition}}
+}
+
+@misc{cite_dlib_github_repo, 
+    title={GitHub Repository: dlib C++ library},
+    author="{E, King et al}",
+    year={2021},
+    note={\url{https://github.com/davisking/dlib}}
+}
+
+@misc{cite_adam_geitgey_machine_learning_convolutional_network_fun, 
+    title={Machine Learning is Fun! Part 3: Deep Learning and Convolutional Neural Networks},
+    author={Adam Geitgey},
+    year={2016},
+    note={\url{https://medium.com/@ageitgey/machine-learning-is-fun-part-3-deep-learning-and-convolutional-neural-networks-f40359318721}}
+}
 
 
 
